# parse_mcfg_ur

./: README.md  pyproject.toml
src/parse_mcfg_ur/: grammar.py  parser.py  tree.py
src/parse_mcfg_ur.egg-info/: PKG-INFO  SOURCES.txt
src/parse_mcfg_ur/parse_mcfg_ur.egg-info/: SOURCES.txt  top_level.txt
test/: grammar_test.py  tree_test.py
